# Esp32Sketches

./: README.MD
LoRaMoistureMeter/: .gitignore  AppConfig.h  CMakeLists.txt  LoRaMoistureMeter.ino  Makefile  README.md  buildAPP.sh  buildUT.sh  installLibraries.bash  libraries.json
LoRaMoistureMeter/Documentation/: DebounceTests.txt
LoRaMoistureMeter/test/: CMakeLists.txt  LoRaMoistureMeterComponentTest.cpp
LoRaMoistureMeter/test/arduinoMock/: CMakeLists.txt
LoRaReceiver/: LoRaReceiver.ino
LoRaSender/: LoRaSender.ino
